Move MySQL dump file from dumps/ to builds/mysql/

--- a/AppCompose/kauth.docker/builds/mysql/Dockerfile
+++ b/AppCompose/kauth.docker/builds/mysql/Dockerfile
@@ -1,4 +1,4 @@
 FROM mysql:8.0.28
 
 COPY ./01-databases.sh /docker-entrypoint-initdb.d
-COPY ../dumps/SA_KAUTH_Dump20240624.sql /docker-entrypoint-initdb.d
+COPY ./SA_KAUTH_Dump20240624.sql /docker-entrypoint-initdb.d
